--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,16 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :first_name,
+                required: true,
+                input_html: { autocomplete: "given-name" } %>
+    <%= f.input :last_name,
+                required: true,
+                input_html: { autocomplete: "family-name" } %>
+    <%= f.input :address,
+                required: true,
+                input_html: { autocomplete: "street-address" } %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
