--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,8 +44,26 @@
       </div>
 
       <div class="sidebarOption">
-        <span class="material-icons"> more_horiz </span>
-        <h2>Mais</h2>
+        <span class="material-icons"> add_circle_outline </span>
+        <h2>Criar Evento</h2>
+      </div>
+
+      <div class="sidebarOption">
+         <div class="profile-info">
+            <div class="post__avatar">
+              <img
+                src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png"
+                alt=""
+              />
+            </div>
+          <div>
+            <p class="name">Djez</p>
+            <p class="username">@gessicahug</p>
+          </div>
+          <div class="option-icon">
+            <span class="material-icons mt-3"> more_horiz </span>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -64,7 +82,7 @@
               src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png"
               alt=""
             />
-            <input type="text" placeholder="O que você está fazendo?" />
+            <input class="ps-3 text-holder" type="text" placeholder="O que você está fazendo?" />
           </div>
           <button class="tweetBox__tweetButton">POSTAR</button>
         </form>
