migrations de username para user na home page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,9 @@
     <%= f.input :last_name,
                 required: true,
                 input_html: { autocomplete: "family-name" } %>
+    <%= f.input :username,
+                required: true,
+                input_html: { autocomplete: "username" } %>
     <%= f.input :address,
                 required: true,
                 input_html: { autocomplete: "street-address" } %>
