container retirado do application view e colocado no new session e new registration

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+    <div class= "container p-3 m-3">
 <div class ="devise-page">
 <main class="flex align-items-center justify-content-center">
   <section id="mobile" class="flex">
@@ -68,4 +69,5 @@
           </div>
         </div>
   </main>
+</div>
 </div>
