--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container p-2">
+<div class="container p-2 mt-2">
   <h2 class="ml-5 my-5">Editar</h2>
   <%= render 'shared/form' %>
 </div>
