--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-2">
   <h1>Eventos</h1>
   <% @events.each do |e| %>
     <dl><%= link_to e.name, event_path(e) %></dl>
