--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-2">
   <h1><%= @event.name %></h1>
   <%= link_to "editar", edit_event_path, class: "btn btn-warning" %>
 </div>
