migrations feitas e geocode localizando os endereços

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :date %>
-  <%= f.input :local %>
+  <%= f.input :address %>
   <%= f.input :category %> <%#collection: Item::CATEGORIES %>
   <%= f.input :photo, as: :file %>
   <%= f.label "Evento privado?" %>
