search bar funciona pello nome dos eventos

--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -1,9 +1,14 @@
     <div class="widgets">
       <div class="widgets-input">
-        <span class="material-icons widgets-search-icon"> search </span>
-        <input type="text" placeholder="Procure Eventos" />
+        <span class="material-icons widgets-search-icon pe-3"> search </span>
+        <%= form_tag events_path, method: :get do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Procure um Evento"
+          %>
+        <% end %>
       </div>
-
       <div class="widgets-widget-container">
         <h2>Próximos Eventos</h2>
         <blockquote>
