--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,18 @@
-    <div class= "container p-3 m-3">
-<div class ="devise-page">
-<main class="flex align-items-center justify-content-center">
-  <section id="mobile" class="flex">
-  </section>
-  <section id="auth" class="flex direction-column">
-      <div class="panel login flex direction-column">
-      <h2>Sign up</h2>
+<div class= "container mt-3">
+  <div class ="devise-page">
+    <div class="flex align-items-center justify-content-center">
+      <section id="mobile" class="flex">
+      </section>
+      <section id="auth" class="flex direction-column">
+        <div class="panel login flex direction-column">
           <h1 title="Lets Go" class="flex justify-content-center">
             <%= link_to "#", class: "logo" do %>
               <%= image_tag "letsgo.png", style: 'width: 130px;height: 130px' %>
             <% end %>
           </h1>
+          <h3>Cadastre-se</h3>
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= f.error_notification %>
+            <%= f.error_notification %>
             <div class="form-inputs">
               <%= f.input :email,
                 label: false,
@@ -55,19 +55,19 @@
               <%= f.button :submit, "Sign up", class: "button" %>
             </div>
           <% end %>
-          </div>
-          <div class="flex separator align-items-center">
-              <span></span>
-              <div class="or">OU</div>
-              <span></span>
-            </div>
-          <div class="panel register-new-user flex direction-column align-items-center">
-              <div class="flex justify-content-center">
-                  <%= "Já tem uma conta?" %>
-                  <%= link_to "Faça login", new_user_session_path %>
-              </div>
+        </div>
+        <div class="flex separator align-items-center">
+          <span></span>
+          <div class="or">OU</div>
+          <span></span>
+        </div>
+        <div class="panel register-new-user flex direction-column align-items-center">
+          <div class="flex justify-content-center">
+            <%= "Já tem uma conta?" %>
+            <%= link_to "Faça login", new_user_session_path %>
           </div>
         </div>
-  </main>
-</div>
+      </div>
+    </div>
+  </div>
 </div>
