botão fica branco

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,5 +27,5 @@
 	      </div>
     </div>
   <% end %>
-  <%= link_to "Novo evento", new_event_path, class: "btn-event text-decoration-none" %>
+  <%= link_to "Novo evento", new_event_path, class: "btn-event text-decoration-none text-white" %>
 </div>
