--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -224,6 +224,11 @@
           <p>Evento 1</p>
           <p>Evento 2</p>
         </blockquote>
+        <div style="width: 100%; height: 300px;"
+          data-controller="mapbox"
+          data-mapbox-markers-value="<%= @markers.to_json %>"
+          data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
       </div>
     </div>
   </body>
