--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,3 +5,10 @@
   <% end %>
   <%= link_to "Novo evento", new_event_path, class: "btn btn-primary" %>
 </div>
+
+
+<div style="width: 100%; height: 300px;"
+  data-controller="mapbox"
+  data-mapbox-markers-value="<%= @markers.to_json %>"
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
