tentei concertar mas nao deu certo

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -8,5 +8,5 @@
   <%= f.label "Evento privado?" %>
   <%= f.check_box :private %>
   <%= f.label "sim" %>
-  <%= f.button :submit, class: 'btn btn-primary w-100' %>
+  <%= f.button :submit, root_path, class: 'btn btn-primary w-100' %>
 <% end %>
