--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container mt-2">
   <h1><%= @event.name %></h1>
   <%= link_to "editar", edit_event_path, class: "btn btn-warning" %>
+  <%= link_to "cancelar", event_path, method: :delete, data: {confirm: 'Você tem certeza?'}, class: "btn btn-danger" %>
+
 </div>
 
 <div style="width: 100%; height: 600px;"
