--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,10 @@
-<div class="container mt-2">
-  <h1 class="ps-3">Eventos</h1>
+
+<div>
+  <div class="mapbox-events" style="width: 100%; height: 300px;"
+    data-controller="mapbox"
+    data-mapbox-markers-value="<%= @markers.to_json %>"
+    data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
   <% @events.each do |event| %>
     <div class="courses-container">
 	    <div class="course">
@@ -28,11 +33,4 @@
     </div>
   <% end %>
   <%= link_to "Novo evento", new_event_path, class: "btn-event text-decoration-none text-white" %>
-</div>
-
-
-<div style="width: 100%; height: 300px;"
-  data-controller="mapbox"
-  data-mapbox-markers-value="<%= @markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
